Delay counter global command wiring